appId: com.company.appname
---

- tapOn: ${output.signInWithEmail}
- tapOn: ${output.emailKey}
- eraseText
- inputText: ${output.emailValue}
- tapOn: ${output.passwordKey}
- eraseText
- inputText: ${output.passwordValue}
- tapOn: ${output.signInBtn}
- extendedWaitUntil:
   visible: ${output.LoginSuccessfully}
   timeout: 100000

