appId: com.company.appname

---

# Wait for payment amount visibility before starting
- extendedWaitUntil:
    visible: ${output.appName}
    timeout: 100000

# Navigate to Profile tab
- tapOn: ${output.profile}

# Tap on 'Account Info' option
- tapOn: ${output.accountInfo}

# Tap on the desired area (if required)
- tapOn:
    point: 13%,23%

# Enter new password
- tapOn: ${output.newPasswordKey}
- inputText: "Webkul@12"
- hideKeyboard

# Enter confirm password
- tapOn: ${output.confirmPasswordKey}
- inputText: "Webkul@12"
- hideKeyboard

# Enter current password
- tapOn: "Password*"
- inputText: ${output.passwordValue}
- hideKeyboard

# Tap on Save button to submit
- tapOn: "Save"

- extendedWaitUntil:
      visible: "Updated Successfully."
      timeout: 100000

- tapOn: "Back"

- runFlow: order_flow.yaml

- runFlow: compare_product.yaml

# OPTIONAL: Verify if password update was successful
# - assertVisible: "Password updated successfully"
